--- a/Zype/Base.lproj/Main.storyboard
+++ b/Zype/Base.lproj/Main.storyboard
@@ -263,6 +263,10 @@
                                             <action selector="onPlanSelected:" destination="Mez-m6-YQ6" eventType="primaryActionTriggered" id="qfx-8D-TkT"/>
                                         </connections>
                                     </button>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="gray" id="gGq-5P-bKR">
+                                        <rect key="frame" x="690" y="290" width="20" height="20"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
@@ -297,6 +301,7 @@
                     </view>
                     <connections>
                         <outlet property="accountLabel" destination="sNZ-bI-uix" id="uDh-jl-diT"/>
+                        <outlet property="activityIndicator" destination="gGq-5P-bKR" id="4bm-7i-CgQ"/>
                         <outlet property="loginButton" destination="mpw-3x-8Th" id="bGC-sm-bea"/>
                         <outlet property="logoImageView" destination="mtX-1i-Maj" id="6kd-K3-414"/>
                         <outletCollection property="subscriptionButtons" destination="rDA-bl-jZa" collectionClass="NSMutableArray" id="1c3-qJ-COA"/>
@@ -604,7 +609,7 @@
             <objects>
                 <collectionViewController storyboardIdentifier="BaseCollectionVC" extendedLayoutIncludesOpaqueBars="YES" automaticallyAdjustsScrollViewInsets="NO" id="6Pp-yV-woX" customClass="BaseCollectionVC" customModule="AndreySandbox" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="CX6-6d-zQs">
-                        <rect key="frame" x="0.0" y="0.0" width="1920" height="450"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aF6-sY-Nvx">
                             <size key="itemSize" width="500" height="500"/>
@@ -613,7 +618,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" id="vP8-eg-LL0">
-                            <rect key="frame" x="0.0" y="0.0" width="1920" height="450"/>
+                            <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         </activityIndicatorView>
                         <cells>
@@ -734,6 +739,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="a18-Ts-CvM"/>
+        <segue reference="FCR-gJ-gcb"/>
     </inferredMetricsTieBreakers>
 </document>
